# Veridian_demo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
mistral-it-agent/: 01_data_prep.ipynb  02_train_classifier.ipynb  03_agent_demo.ipynb  README.md  app.py  requirements.txt
mistral-it-agent/agents/: adapted_agent.py  base_agent.py  tools.py
mistral-it-agent/data/: classifier_model_id.txt  escalation_policy.json  internal_kb.json  kb.json  raw_tickets.json  raw_tickets_synthetic.json
mistral-it-agent/tests/: conftest.py  test_agents.py  test_data.py  test_integration.py  test_tools.py
src/interview_demo/: __init__.py
