[project]
name = "veridian-demo"
version = "0.1.0"
description = "A demo of an agentic ticket system, with fine-tuning."
readme = "README.md"
authors = [
    { name = "Robert Crowe", email = "maybe_not@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mistralai>=2.1.2",
    "pandas",
    "scikit-learn",
    "python-dotenv",
    "rich",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.8",
    "streamlit>=1.55.0",
    "together>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["mistral-it-agent/tests"]
markers = [
    "integration: tests that call the live Mistral API (require MISTRAL_API_KEY)",
]
